# skyrim-mouse-holder

./: Cargo.toml  README.md
src/: main.rs  window_structs.rs  windows_specific.rs
