[package]
name = "skyrim_center_mouse"
version = "0.1.0"
authors = ["dylanwalseth <dylanwalseth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
enigo = "0.0.14"
ctrlc = "3.1.6"
libc = "*"

[target.'cfg(windows)'.dependencies]
user32-sys = "0.2.0"
winapi = "^0.2.5"
winapi-build = "^0.1.1"
